[package]
name = "wasmfrontend"
version = "0.1.0"
edition = "2021"


[lib]
crate-type = ["cdylib"]

[profile.release]
strip = true        # Automatically strip symbols from the binary
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic


[dependencies]
wasm-bindgen = "0.2.83"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.9"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'Document',
  'Element',
  'HtmlElement',
  'Node',
  'Window',
]